Fix bug for flatten-executable to not enumerate more items than source.
GetItem-method is rewritten in order to fix the bug and unit tests are included.

--- a/Pipes4NET.Tests/Pipes4NET.Tests.csproj
+++ b/Pipes4NET.Tests/Pipes4NET.Tests.csproj
@@ -50,6 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="SpyExecutable.cs" />
+    <Compile Include="ExecutableSpec.cs" />
     <Compile Include="FlattenExecutableSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
