--- a/Pipes4NET/Pipes4NET.csproj
+++ b/Pipes4NET/Pipes4NET.csproj
@@ -50,6 +50,8 @@
     <Compile Include="IExecutable.cs" />
     <Compile Include="PipeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReduceExecutable.cs" />
+    <Compile Include="ReduceFuncExecutable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
