--- a/Pipes4NET.Tests/Pipes4NET.Tests.csproj
+++ b/Pipes4NET.Tests/Pipes4NET.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FlattenExecutableSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IdentityExecutableSpec.cs" />
+    <Compile Include="ReduceExecutableSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pipes4NET\Pipes4NET.csproj">
